helloworld-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: k8s-demo
        image: arjunachari12/k8s-demo
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - name: sample-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: sample-port
          initialDelaySeconds: 10
          timeoutSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: sample-port
          initialDelaySeconds: 10
          timeoutSeconds: 20
