mysql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-secret-pod
  labels:
    name: mysql-pod
spec:
  containers:
    - name: mysql-pod
      image: mysql
      ports:
        - containerPort: 4005
          name: mysql-port
