pod-configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: alpine
    command: ["sleep", "3600"]
