pod5.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod5
  name: pod5
spec:
  containers:
  - image: bvinodkumar2008/java-project
    name: pod5
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
