redis-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis-dep
  name: redis-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis-dep
    spec:
      containers:
      - image: redis
        name: redis
        resources: {}
status: {}
