java-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  ports:
  - port: 31005
    nodePort: 31006
    targetPort: java-app-port
    protocol: TCP
  selector:
    app:  java-sample-app
  type: NodePort
