redis-pod-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: redis-pod
  name: redis-svc
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    run: redis-pod
  type: NodePort
status:
  loadBalancer: {}
